# Clustering-CRM

./: README.md  pyproject.toml
artifacts/: feature_names.joblib  kmeans_model.joblib  pca_model.joblib  preprocessing_pipeline.joblib
notebooks/: eda.ipynb  modelling.ipynb
